# kasp-test-task

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  updates.md
app/: config.py  di.py  main.py  models.py  setup.py
app/handlers/: __init__.py  handlers.py  middlewares.py
app/infrastructure/: di.py  lemmatizer.py  storage.py  writer.py
app/services/: __init__.py  di.py  exporter.py  ports.py  statistics.py
example-data/: Joyce_portrait.txt  result.xlsx  sample.txt  script.sh
tests/e2e/: conftest.py  test_export.py
tests/integration/: db_integration_test.py
tests/unit/: exporter_test.py  lematizer_test.py  statistics_test.py  xlsx_writer_test.py
