[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "dishka (>=1.9.1,<2.0.0)",
    "mawo-natasha[slovnet] (>=1.0.3,<2.0.0)",
    "razdel (>=0.5.0,<0.6.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-multipart",
    "mawo-pymorphy3 (>=1.0.4,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "slovnet (>=0.6.0,<0.7.0)",
    "dawg-python (>=0.7.2,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "locust (>=2.43.3,<3.0.0)",
]


[tool.pytest]
pythonpath = [ "." ]
testpaths = [ "tests/unit", "tests/e2e" ]
markers = [ "asyncio" ]
addopts = [
    "--import-mode=importlib",
]


[tool.ruff]
target-version = "py312"
src = ["app"]
 

[tool.ruff.lint]
select = [ "E", "F", "I", "RUF" ]
exclude = [ "tests/**" ]
fixable = [ "I", "RUF" ]
ignore = [ "E501" ]


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F401"]


[tool.ruff.lint.isort]
known-first-party = ["app"]
